--- a/.github/workflows/settle.yml
+++ b/.github/workflows/settle.yml
@@ -17,7 +17,10 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.12"
-          
+      
+      - name: 安装依赖
+        run: |
+          pip install -r requirements.txt
 
       - name: 执行结算脚本
         env:
