--- a/.github/workflows/settle.yml
+++ b/.github/workflows/settle.yml
@@ -26,9 +26,11 @@ jobs:
         env:
           NOTION_TOKEN: ${{ secrets.NOTION_SECRET }}
           DATABASE_ID: ${{ secrets.NOTION_DATABASE_ID }}
+          PAGE_ID: ${{ secrets.NOTION_PAGE_ID }}
         run: |
           python main.py \
             "${DATABASE_ID}" \
+            "${PAGE_ID}" \
             "${NOTION_TOKEN}" \
             --currency="SEK" \
             --settle_mode="bank" \
